--- a/app/static/css/analyze_video.css
+++ b/app/static/css/analyze_video.css
@@ -502,9 +502,9 @@ html.dark .empty-state > i {
 
 /* Loading Modal */
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
