--- a/app/templates/teams/dashboard.html
+++ b/app/templates/teams/dashboard.html
@@ -72,31 +72,31 @@
                 </h3>
                 <div class="permissions-grid">
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_keyword_research" checked>
+                        <input type="checkbox" id="perm_keyword_research">
                         <label for="perm_keyword_research">Keyword Research</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_analyze_video" checked>
+                        <input type="checkbox" id="perm_analyze_video">
                         <label for="perm_analyze_video">Analyze Video</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_competitors" checked>
+                        <input type="checkbox" id="perm_competitors">
                         <label for="perm_competitors">Competitors</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_video_script" checked>
+                        <input type="checkbox" id="perm_video_script">
                         <label for="perm_video_script">Video Script</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_video_title" checked>
+                        <input type="checkbox" id="perm_video_title">
                         <label for="perm_video_title">Title & More</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_optimize_video" checked>
+                        <input type="checkbox" id="perm_optimize_video">
                         <label for="perm_optimize_video">Optimize Video</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_thumbnail" checked>
+                        <input type="checkbox" id="perm_thumbnail">
                         <label for="perm_thumbnail">Thumbnail</label>
                     </div>
                 </div>
@@ -109,19 +109,19 @@
                 </h3>
                 <div class="permissions-grid">
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_x_post_editor" checked>
+                        <input type="checkbox" id="perm_x_post_editor">
                         <label for="perm_x_post_editor">Post Magic</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_reply_guy" checked>
+                        <input type="checkbox" id="perm_reply_guy">
                         <label for="perm_reply_guy">Reply Guy</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_clip_spaces" checked>
+                        <input type="checkbox" id="perm_clip_spaces">
                         <label for="perm_clip_spaces">Clip Spaces</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_niche" checked>
+                        <input type="checkbox" id="perm_niche">
                         <label for="perm_niche">Niche Radar</label>
                     </div>
                 </div>
@@ -134,23 +134,23 @@
                 </h3>
                 <div class="permissions-grid">
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_trend_finder" checked>
+                        <input type="checkbox" id="perm_trend_finder">
                         <label for="perm_trend_finder">Trend Finder</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_tiktok_keyword_research" checked>
+                        <input type="checkbox" id="perm_tiktok_keyword_research">
                         <label for="perm_tiktok_keyword_research">Keyword Research</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_tiktok_competitors" checked>
+                        <input type="checkbox" id="perm_tiktok_competitors">
                         <label for="perm_tiktok_competitors">Competitors</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_hook_generator" checked>
+                        <input type="checkbox" id="perm_hook_generator">
                         <label for="perm_hook_generator">Hook Generator</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_titles_hashtags" checked>
+                        <input type="checkbox" id="perm_titles_hashtags">
                         <label for="perm_titles_hashtags">Titles & Hashtags</label>
                     </div>
                     <!-- Analytics permission shared across all platforms (defined in YouTube section) -->
@@ -164,19 +164,19 @@
                 </h3>
                 <div class="permissions-grid">
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_brain_dump" checked>
+                        <input type="checkbox" id="perm_brain_dump">
                         <label for="perm_brain_dump">Brain Dump</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_mind_map" checked>
+                        <input type="checkbox" id="perm_mind_map">
                         <label for="perm_mind_map">Mind Map</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_content_wiki" checked>
+                        <input type="checkbox" id="perm_content_wiki">
                         <label for="perm_content_wiki">Content Wiki</label>
                     </div>
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_content_calendar" checked>
+                        <input type="checkbox" id="perm_content_calendar">
                         <label for="perm_content_calendar">Content Calendar</label>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                 </h3>
                 <div class="permissions-grid">
                     <div class="permission-item">
-                        <input type="checkbox" id="perm_analytics" checked>
+                        <input type="checkbox" id="perm_analytics">
                         <label for="perm_analytics">Analytics (All Platforms)</label>
                     </div>
                 </div>
